--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,21 @@
+﻿# Gradle
+.gradle/
+build/
+*/build/
+
+# Android Studio / IntelliJ
+.idea/
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+
+# Logs
+*.log
+
+# Local config
 local.properties
+
+# NDK / CMake
+.cxx/
+
+# Keystores (never commit)
+*.jks
+*.keystore
